logs/dag_id=tune_stream_dag/run_id=scheduled__2023-01-02T140000+0000/task_id=Load_songplays_fact_table/attempt=1.log
[2025-07-24T13:53:36.646+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T14:00:00+00:00 [queued]>
[2025-07-24T13:53:36.665+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T14:00:00+00:00 [queued]>
[2025-07-24T13:53:36.666+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T13:53:36.691+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-02 14:00:00+00:00
[2025-07-24T13:53:36.707+0000] {standard_task_runner.py:60} INFO - Started process 545 to run task
[2025-07-24T13:53:36.728+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-02T14:00:00+00:00', '--job-id', '391', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmpbpniqcok']
[2025-07-24T13:53:36.735+0000] {standard_task_runner.py:88} INFO - Job 391: Subtask Load_songplays_fact_table
[2025-07-24T13:53:36.906+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T14:00:00+00:00 [running]> on host a4bcda7cb679
[2025-07-24T13:53:37.065+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-02T14:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-02T14:00:00+00:00'
[2025-07-24T13:53:37.081+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 168, in <lambda>
    python_callable=lambda: load_table(SqlQueries.songplay_table_insert),
  File "/opt/airflow/dags/etl_pipeline.py", line 127, in load_table
    cur.execute(f"DELETE FROM {query.split()[3]}")
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^

[2025-07-24T13:53:37.105+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230102T140000, start_date=20250724T135336, end_date=20250724T135337
[2025-07-24T13:53:37.133+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 391 for task Load_songplays_fact_table (syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^
; 545)
[2025-07-24T13:53:37.179+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-24T13:53:37.338+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-07-24T17:18:32.528+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T14:00:00+00:00 [queued]>
[2025-07-24T17:18:32.548+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T14:00:00+00:00 [queued]>
[2025-07-24T17:18:32.549+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T17:18:32.575+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-02 14:00:00+00:00
[2025-07-24T17:18:32.601+0000] {standard_task_runner.py:60} INFO - Started process 1641 to run task
[2025-07-24T17:18:32.623+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-02T14:00:00+00:00', '--job-id', '2133', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmpdtg22pq2']
[2025-07-24T17:18:32.637+0000] {standard_task_runner.py:88} INFO - Job 2133: Subtask Load_songplays_fact_table
[2025-07-24T17:18:32.838+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T14:00:00+00:00 [running]> on host 5def55d2a1b5
[2025-07-24T17:18:33.025+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-02T14:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-02T14:00:00+00:00'
[2025-07-24T17:18:33.170+0000] {python.py:201} INFO - Done. Returned value was: None
[2025-07-24T17:18:33.189+0000] {taskinstance.py:1138} INFO - Marking task as SUCCESS. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230102T140000, start_date=20250724T171832, end_date=20250724T171833
[2025-07-24T17:18:33.237+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 0
[2025-07-24T17:18:33.272+0000] {taskinstance.py:3280} INFO - 4 downstream tasks scheduled from follow-on schedule check
